test/libsolidity/syntaxTests/userDefinedValueType/self_reference_err.sol
type MyInt is MyInt;
// ----
// TypeError 8657: (14-19): The underlying type for a user defined value type has to be an elementary value type.
